--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -163,7 +163,7 @@ jobs:
           root: ~/
           paths:
             - project/.circleci/ansible/inventory.txt
-      - destroy-enviroment
+      - destroy-environment
 #   configure-infrastructure:
 #     docker:
 #       # Docker image here that supports Ansible
