--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -156,7 +156,7 @@ jobs:
       - run:
           name: Add back-end ip to ansible inventory
           command: |
-            IP_ADDRESS=$(aws ec2 describe-stacks \
+            IP_ADDRESS=$(aws ec2 describe-instances \
               --filters "Name=tag:Name,Values=backend-${CIRCLE_WORKFLOW_ID}" \
               --query 'Reservations[*].Instances[*].PublicIpAddress' \
               --output text) 
