--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -21,6 +21,17 @@ commands:
       Workflow_ID:
         type: string
         default: ${CIRCLE_WORKFLOW_ID}
+
+  awscli-install:
+    description: Install AWS CLI v2
+    steps:
+      - run:
+          name: Install AWS CLI v2
+          command: |
+            curl "https://awscli.amazonaws.com/awscli-exe-linux-x86_64.zip" -o "awscliv2.zip"
+            unzip awscliv2.zip
+            sudo ./aws/install
+
     steps:
       - run:
           name: Revert migrations
@@ -172,6 +183,7 @@ jobs:
       - image: python:3.8-alpine3.16
     steps:
       - checkout
+      - awscli-install
       - add_ssh_keys:
           fingerprints: ["ba:a6:6d:84:77:83:6a:cb:87:0c:61:b7:fe:f7:97:b7"]
       - attach_workspace:
@@ -193,14 +205,14 @@ jobs:
       - image: circleci/node:13.8.0
     steps:
       - checkout
+      - awscli-install
       - restore_cache:
-          keys: [backend-build]
+          keys: [backedn-build]
       - run:
           name: Run migrations
           command: |
             cd backend
             npm install
-            # Run and save the migration output
             npm run migrations > migrations_dump.txt
       - run:
           name: Send migration results to kvdb.io
