fixing config file mispelling

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -202,7 +202,7 @@ jobs:
     steps:
       - checkout
       - restore_cache:
-          keys: [backedn-build]
+          keys: [backend-build]
       - run:
           name: Run migrations
           command: |
