--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -6,7 +6,7 @@ commands:
     parameters:
       Workflow_ID:
         type: string
-        default: ${CIRCLE_WORKFLOW_ID}
+        default: ${CIRCLE_WORKFLOW_ID:0:7}
     steps:
       - run:
           name: Destroy environments
@@ -20,14 +20,14 @@ commands:
     parameters:
       Workflow_ID:
         type: string
-        default: ${CIRCLE_WORKFLOW_ID}
+        default: ${CIRCLE_WORKFLOW_ID:0:7}
     steps:
       - run:
           name: Revert migrations
           when: on_fail
           command: |
             # Curl command here to see if there was a successful migration associated with the workflow id, store result in SUCCESS variable
-            SUCCESS = $(curl https://kvdb.io/9GMgy9sE7ivdqMDNGEN6c9/migration_${CIRCLE_WORKFLOW_ID})
+            SUCCESS = $(curl https://kvdb.io/9GMgy9sE7ivdqMDNGEN6c9/migration_${CIRCLE_WORKFLOW_ID:0:7})
             if(( SUCCESS)); 
             then
               cd ~/project/backend
@@ -150,30 +150,29 @@ jobs:
             aws cloudformation deploy \
               --template-file .circleci/files/backend.yml \
               --tags project=udapeople \
-              --stack-name "udapeople-backendinfra-${CIRCLE_WORKFLOW_ID}" \
-              --parameter-overrides ID="${CIRCLE_WORKFLOW_ID}"
+              --stack-name "udapeople-backendinfra-${CIRCLE_WORKFLOW_ID:0:7}" \
+              --parameter-overrides ID="${CIRCLE_WORKFLOW_ID:0:7}"
       - run:
           name: Ensure front-end infrastructure exist
           command: |
             aws cloudformation deploy \
               --template-file .circleci/files/frontend.yml \
               --tags project=udapeople \
-              --stack-name "udapeople-frontendinfra-${CIRCLE_WORKFLOW_ID}" \
-              --parameter-overrides ID="${CIRCLE_WORKFLOW_ID}"
+              --stack-name "udapeople-frontendinfra-${CIRCLE_WORKFLOW_ID:0:7}" \
+              --parameter-overrides ID="${CIRCLE_WORKFLOW_ID:0:7}"
       - run:
           name: Add back-end ip to ansible inventory
           command: |
-            IP_ADDRESS=$(aws ec2 describe-instances \
+            aws ec2 describe-instances \
               --filters "Name=tag:Name,Values=backend-${CIRCLE_WORKFLOW_ID}" \
               --query 'Reservations[*].Instances[*].PublicIpAddress' \
-              --output text) 
-            echo $IP_ADDRESS >>  .circleci/ansible/inventory.txt
+              --output text >>  .circleci/ansible/inventory.txt
       - persist_to_workspace:
           root: ~/
           paths:
             - project/.circleci/ansible/inventory.txt
       - destroy-environment:
-          Workflow_ID: ${CIRCLE_WORKFLOW_ID}
+          Workflow_ID: ${CIRCLE_WORKFLOW_ID:0:7}
 
   configure-infrastructure:
     docker:
@@ -194,13 +193,14 @@ jobs:
             cd .circleci/ansible
             ansible-playbook -i inventory.txt configure-server.yml
       - destroy-environment:
-          Workflow_ID: ${CIRCLE_WORKFLOW_ID}
+          Workflow_ID: ${CIRCLE_WORKFLOW_ID:0:7}
 
   run-migrations:
     docker:
       - image: circleci/node:13.8.0
     steps:
       - checkout
+      - awscli-install
       - restore_cache:
           keys: [backend-build]
       - run:
@@ -214,10 +214,10 @@ jobs:
           command: |
             if grep -q "has been executed successfully." ~/project/backend/migrations_dump.txt
             then
-              curl https://kvdb.io/9GMgy9sE7ivdqMDNGEN6c9/migration_${CIRCLE_WORKFLOW_ID}  -d '1'
+              curl https://kvdb.io/9GMgy9sE7ivdqMDNGEN6c9/migration_${CIRCLE_WORKFLOW_ID:0:7}  -d '1'
             fi
       - destroy-environment:
-          Workflow_ID: ${CIRCLE_WORKFLOW_ID}
+          Workflow_ID: ${CIRCLE_WORKFLOW_ID:0:7}
 
   deploy-frontend:
     docker:
@@ -236,7 +236,7 @@ jobs:
           command: |
             export BACKEND_IP=$(aws ec2 describe-instances \
               --query 'Reservations[*].Instances[*].PublicIpAddress' \
-              --filters "Name=tag:project,Values=udapeople-backend-${CIRCLE_WORKFLOW_ID}" \
+              --filters "Name=tag:project,Values=udapeople-backend-${CIRCLE_WORKFLOW_ID:0:7}" \
               --output text)
             export API_URL="http://${BACKEND_IP}:3030"
             echo "${API_URL}"
@@ -248,12 +248,12 @@ jobs:
             cd frontend
             npm install
             npm run build
-            tar -czvf artifact-"${CIRCLE_WORKFLOW_ID}".tar.gz dist
-            aws s3 cp dist s3://udapeople-${CIRCLE_WORKFLOW_ID} --recursive
+            tar -czvf artifact-"${CIRCLE_WORKFLOW_ID:0:7}".tar.gz dist
+            aws s3 cp dist s3://udapeople-${CIRCLE_WORKFLOW_ID:0:7} --recursive
       - destroy-environment:
-          Workflow_ID: ${CIRCLE_WORKFLOW_ID}
+          Workflow_ID: ${CIRCLE_WORKFLOW_ID:0:7}
       - revert-migrations:
-          Workflow_ID: ${CIRCLE_WORKFLOW_ID}
+          Workflow_ID: ${CIRCLE_WORKFLOW_ID:0:7}
   deploy-backend:
     docker:
       - image: amazon/aws-cli
@@ -281,9 +281,9 @@ jobs:
             cat inventory.txt
             ansible-playbook -i inventory.txt deploy-backend.yml
       - destroy-environment:
-          Workflow_ID: ${CIRCLE_WORKFLOW_ID}
+          Workflow_ID: ${CIRCLE_WORKFLOW_ID:0:7}
       - revert-migrations:
-          Workflow_ID: ${CIRCLE_WORKFLOW_ID}
+          Workflow_ID: ${CIRCLE_WORKFLOW_ID:0:7}
 
 #   smoke-test:
 #     docker:
