--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -166,7 +166,8 @@ jobs:
             aws ec2 describe-instances \
               --filters "Name=tag:Name,Values=backend-${CIRCLE_WORKFLOW_ID}" \
               --query 'Reservations[*].Instances[*].PublicIpAddress' \
-              --output text >>  .circleci/ansible/inventory.txt
+              --output text >> .circleci/ansible/inventory.txt
+            cat .circleci/ansible/inventory.txt
       - persist_to_workspace:
           root: ~/
           paths:
@@ -221,16 +222,16 @@ jobs:
 
   deploy-frontend:
     docker:
-      - image: cimg/base:stable
+      - image: python:3.9.0-alpine
     steps:
       - checkout
-      - awscli-install
       - restore_cache:
           keys: [frontend-build]
       - run:
           name: Install dependencies
           command: |
             apk add --update ansible curl rsync openssh nodejs npm
+            pip install awscli
       - run:
           name: Get backend url
           command: |
