--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -258,7 +258,7 @@ jobs:
 
   deploy-backend:
     docker:
-      - image: python:3.8-alpine3.16
+      - image: python:3.9.0-alpine
     steps:
       - checkout
       - add_ssh_keys:
