--- a/.circleci/ansible/roles/deploy/tasks/main.yml
+++ b/.circleci/ansible/roles/deploy/tasks/main.yml
@@ -1,7 +1,7 @@
 - name: "extract the zipped artifact"
   unarchive:
     src: ~/project/artifact.tar.gz
-    dest: /home/ubuntu/
+    dest: ~/
 
 - name: "Install dependency NodeJS and NPM"
   become: true
@@ -18,6 +18,5 @@
 
 - name: "start the app"
   shell: |
-    cd /home/ubuntu/artifact/dist
     pm2 stop default
     pm2 start main.js
