--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -28,8 +28,8 @@ commands:
           when: on_fail
           command: |
             # Curl command here to see if there was a successful migration associated with the workflow id, store result in SUCCESS variable
-            SUCCESS = $(curl --insecure https://kvdb.io/9GMgy9sE7ivdqMDNGEN6c9/migration_${CIRCLE_WORKFLOW_ID:0:7})
-            if(( $SUCCESS)); 
+            SUCCESS = $(curl --insecure https://kvdb.io/9ArzEPPvZV6yjA5qewCwNo/migration_<< parameters.Workflow_ID >>)
+            if(( $SUCCESS == 1)); 
             then
               cd ~/project/backend
               npm install
@@ -216,7 +216,7 @@ jobs:
           command: |
             if grep -q "has been executed successfully." ~/project/backend/migrations_dump.txt
             then
-              curl --insecure https://kvdb.io/9GMgy9sE7ivdqMDNGEN6c9/migration_${CIRCLE_WORKFLOW_ID:0:7}  -d '1'
+              curl --insecure https://kvdb.io/9ArzEPPvZV6yjA5qewCwNo/migration_${CIRCLE_WORKFLOW_ID:0:7}  -d '1'
             fi
       - destroy-environment:
           Workflow_ID: ${CIRCLE_WORKFLOW_ID:0:7}
