--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -392,6 +392,7 @@ jobs:
           command: |
             if [[ "${CIRCLE_WORKFLOW_ID:0:7}" =~ "${OldWorkflowID}" ]]
             then
+              aws s3 rm "s3://udapeople-${OldWorkflowID}" --recursive
               aws cloudformation delete-stack --stack-name "udapeople-backendinfra-${OldWorkflowID}"
               aws cloudformation delete-stack --stack-name "udapeople-frontendinfra-${OldWorkflowID}"
             fi
@@ -426,5 +427,5 @@ workflows:
           requires: [deploy-backend, deploy-frontend]
       - cloudfront-update:
           requires: [smoke-test]
-      # - cleanup:
-      #     requires: [cloudfront-update]
+      - cleanup:
+          requires: [cloudfront-update]
