--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -390,11 +390,13 @@ jobs:
       - run:
           name: Remove old stacks and files
           command: |
-            if [[ "${STACKS[@]}" =~ "${OldWorkflowID}" ]]
+            for WorkflowID in ${STACKS[@]}
+            do
+            if [[ "${WorkflowID: -7}" =~ "${CIRCLE_WORKFLOW_ID:0:7}" ]]
             then
-              aws s3 rm "s3://udapeople-${OldWorkflowID}" --recursive
-              aws cloudformation delete-stack --stack-name "udapeople-backendinfra-${OldWorkflowID}"
-              aws cloudformation delete-stack --stack-name "udapeople-frontendinfra-${OldWorkflowID}"
+              aws s3 rm "s3://udapeople-${WorkflowID: -7}" --recursive
+              aws cloudformation delete-stack --stack-name "udapeople-backendinfra-${WorkflowID: -7}"
+              aws cloudformation delete-stack --stack-name "udapeople-frontendinfra-${WorkflowID: -7}"
             fi
 workflows:
   default:
