--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -390,7 +390,7 @@ jobs:
       - run:
           name: Remove old stacks and files
           command: |
-            for WorkflowID in ${STACKS[@]}
+            for WorkflowID in "${STACKS[@]}"
             do
               if [ "${WorkflowID:-7}" =~ "${CIRCLE_WORKFLOW_ID:0:7}" ]
               then
