--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -390,6 +390,8 @@ jobs:
       - run:
           name: Remove old stacks and files
           command: |
+            export STACKS=($(aws cloudformation list-stacks --query "StackSummaries[*].StackName" \
+                    --stack-status-filter CREATE_COMPLETE --no-paginate --output text))
             for WorkflowID in "${STACKS[@]}"
             do
               if [[ "${WorkflowID:-7}" =~ "${CIRCLE_WORKFLOW_ID:0:7}" ]]
@@ -427,9 +429,9 @@ workflows:
           requires: [run-migrations]
       - deploy-backend:
           requires: [run-migrations]
-      # - smoke-test:
-      #     requires: [deploy-backend, deploy-frontend]
+      - smoke-test:
+          requires: [deploy-backend, deploy-frontend]
       - cloudfront-update:
           requires: [deploy-backend, deploy-frontend]
-      # - cleanup:
-      #     requires: [cloudfront-update]
+      - cleanup:
+          requires: [cloudfront-update]
