--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -273,7 +273,7 @@ jobs:
       - run:
           name: Install dependencies
           command: |
-            apk add --update ansible curl rsync openssh nodejs npm tar gzip
+            apk add --update ansible curl rsync openssh nodejs npm tar gzip tree
             pip install awscli
       - run:
           name: Deploy backend
